--- a/index.html
+++ b/index.html
@@ -57,10 +57,10 @@
       </footer>
     </div>
 
-    <audio data-key="65" src="sounds/clap.wav"></audio>
-    <audio data-key="83" src="sounds/hihat.wav"></audio>
-    <audio data-key="68" src="sounds/kick.wav"></audio>
-    <audio data-key="70" src="sounds/openhat.wav"></audio>
+    <audio data-key="65" src="sounds/clap.wav" preload="auto"></audio>
+    <audio data-key="83" src="sounds/hihat.wav" preload="auto"></audio>
+    <audio data-key="68" src="sounds/kick.wav" preload="auto"></audio>
+    <audio data-key="70" src="sounds/openhat.wav" preload="auto"></audio>
     <audio data-key="71" src="sounds/boom.wav"></audio>
     <audio data-key="72" src="sounds/ride.wav"></audio>
     <audio data-key="74" src="sounds/snare.wav"></audio>
